<resources>
    <string name="app_name">SmartManagement</string>
    <string name="app_title">效率分析系统</string>
    <string name="login_nameHint">请输入域账号</string>
    <string name="input_next">下一个</string>
    <string name="login_pwHint">请输入密码</string>
    <string name="input_complete">登录</string>
    <string name="show_password">显示密码</string>
    <string name="save_login">保存登录信息</string>
    <string name="loginning">登录中...</string>
    <string name="no_name">此用户不存在</string>
    <string name="password_wrong">密码错误</string>
    <string name="action_settings">Settings</string>

    <string name="screen1_title">诚信 务实 开拓 合作</string>
    <string name="screen1_desc">Trustworthy Pragmatic Pioneering Cooperative</string>
    <string name="screen2_title">科技创造健康·美</string>
    <string name="screen2_desc">A better life enriched by technology </string>
    <string name="screen3_title">我们一起创造</string>
    <string name="screen3_desc">We make it together</string>

    <string name="getting_data">获取数据 ...</string>

    <string name="OLE">OLE</string>
    <string name="OPE">OPE</string>
    <string name="OEE">OEE</string>

    <string name="MONTH">月</string>
    <string name="WEEK">周</string>
    <string name="DAY">日</string>

    <string name="OLE_Total_Title">OLE 线体综合效率分析</string>
    <string name="OPE_Total_Title">OPE 线体综合效率分析</string>
    <string name="OEE_Total_Title">OEE 线体综合效率分析</string>
    <string name="Select_Area">请选择园区</string>
    <string name="Select_Serial">请选择系列</string>
    
    <string name="jiepai_loss">节拍损失</string>
    <string name="shouxian_loss">收线损失</string>
    <string name="shoujian_loss">首件损失</string>
    <string name="qiexian_loss">切线损失</string>
    <string name="huangongdan_loss">换工单损失</string>
    <string name="guzhang_loss">故障损失</string>
    <string name="xianti_efficiency">线体效率</string>

    <string name="user_message">我的消息</string>
    <string name="latest_guest">最新访客</string>
    <string name="login_out">退出登录</string>

    <string name="network_error_title">网络异常</string>
    <string name="network_error_content">似乎与服务器断开，请检查网络后重试</string>
    <string name="refresh">点击刷新</string>

    <string name="message_title">sakfjlaskfjdsa</string>
    <string name="message_demo">这是一条消息，这是一条消息，这是一条消息，这是一条消息，这是一条消息</string>
    <string name="guest_name">S.H.I.L.E.D</string>
    <string name="guest_time">2018-8-7  09:30</string>
</resources>
