<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/user_message"
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@+id/my_message"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/latest_guest"
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@+id/guest"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/login_out"
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@+id/loginOut"/>

</LinearLayout>
