<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="#E8E8E8"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="#199ED8"
        android:text="@string/DAY"
        android:clickable="false"
        android:id="@+id/day_tab"/>

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="#bbbccc" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/WEEK"
        android:clickable="false"
        android:id="@+id/week_tab"/>

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="#bbbccc" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/MONTH"
        android:clickable="false"
        android:id="@+id/month_tab"/>

</LinearLayout>
